# SCIFIG

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: case-studies.md  journal-standards.md
examples/: generate_case_images.py  pattern_demos.py  quick_start.py
src/sci_figure_toolkit/: __init__.py  auditor.py  cli.py  patterns.py  standards.py  style.py  utils.py
tests/: __init__.py  test_auditor.py  test_patterns.py  test_standards.py  test_utils.py
